Modifiquei a página de jogadores

--- a/Html/jogadores.html
+++ b/Html/jogadores.html
@@ -12,6 +12,10 @@
       <h1 class="texto-header">League of Resilia</h1>
     </header>
 
+    <main>
+      <h2 class="escolha">Escolha com quem quer jogar</h2>
+    </main>
+
     <div class="jogadores">
       <div class="card1">
         <div class="foto-card1">
@@ -21,7 +25,7 @@
             alt="Foto do personagem 1"
           />
         </div>
-        <h3 class="botao1">Resiliente Ana</h3>
+        <a href="./jogador1.html" class="botao1">Resiliente Ana</a href="">
       </div>
 
       <div class="card2">
@@ -32,7 +36,7 @@
             alt="Foto do personagem 1"
           />
         </div>
-        <h3 class="botao2">Resiliente Patrick</h3>
+        <a href="./jogador2.html" class="botao2">Resiliente Patrick</a href="">
       </div>
 
       <div class="card3">
@@ -43,7 +47,7 @@
             alt="Foto do personagem 1"
           />
         </div>
-        <h3 class="botao3">Resiliente Alexandre</h3>
+        <a href="./jogador3.html" class="botao3">Resiliente Alexandre</a href="">
       </div>
     </div>
 
