Começando a dar movimento ao jogo!

--- a/Html/index.html
+++ b/Html/index.html
@@ -16,7 +16,7 @@
       <h3 class="bem-vindo">Bem vindos ao <br>League of Legend</h3>
       <p>
         Ana, Patrick e Alexandre estão prestes a embarcar em uma aventura que
-        mudará suas vidas para sempre. Eles foram Selecionados para fazer parte
+        mudará suas vidas para sempre. Eles foram selecionados para fazer parte
         da turma 13 de Desenvolvedor Fullstack da Resilia e para se dar bem nessa jornada eles precisam da
         sua ajuda.
       </p>
