--- a/Html/jogador2.html
+++ b/Html/jogador2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./../Css/jogador2.css">
+    <link rel="stylesheet" href="./../Css/jogador2.css" />
+    <script src="./../javascript/jogador2.js"></script>
     <title>Jogador 2</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
         <div class="foto-card2">
           <img
             class="imagem"
-            src="https://pps.whatsapp.net/v/t61.24694-24/269038919_382385033889440_5406132132034735914_n.jpg?ccb=11-4&oh=f73c1fa933caedd292e01d4290f17e6f&oe=6230F63E"
+            src="./../img/patrick.jpg"
             alt="Foto do personagem 1"
           />
         </div>
