--- a/Html/jogador3.html
+++ b/Html/jogador3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../Css/jogador3.css">
+    <script src="./../javascript/jogador3.js"></script>
     <title>Jogador 3</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <div class="foto-card3">
           <img
             class="imagem"
-            src="https://media-exp1.licdn.com/dms/image/C5603AQEkCm06naDI0w/profile-displayphoto-shrink_800_800/0/1645566682668?e=1652918400&v=beta&t=rg0eEQFnrKvZG8lOaKmriGPB4ztRt61VFSyf-Jhz79g"
+            src="./../img/ale.jpg"
             alt="Foto do personagem 1"
           />
         </div>
