--- a/Html/jogador1.html
+++ b/Html/jogador1.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./../Css/jogador1.css">
+    <link rel="stylesheet" href="./../Css/jogador1.css" />
+    <script src="./../javascript/jogador1.js"></script>
+
     <title>Jogador 1</title>
   </head>
   <body>
@@ -20,7 +22,6 @@
         <h3 class="botao1">Resiliente Ana</h3>
       </div>
     </main>
-
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
   </body>
 </html>
