Finalizando fases do jogador1, tela de game over e iniciando fases dos outros jogadores

--- a/Html/index.html
+++ b/Html/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-      <h3 class="bem-vindo">Bem vindos ao <br>League of Legend</h3>
+      <h3 class="bem-vindo">Bem vindos ao <br>League of Resilia</h3>
       <p>
         Ana, Patrick e Alexandre estão prestes a embarcar em uma aventura que
         mudará suas vidas para sempre. Eles foram selecionados para fazer parte
