--- a/Html/jogador1fase3.html
+++ b/Html/jogador1fase3.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./../Css/jogador1.css" />
-    <script src="./../javascript/jogador1.js"></script>
-
+    <script src="./../javascript/jogador1fase3.js"></script>
     <title>LOR - Resiliente Ana</title>
   </head>
   <body>
