--- a/Html/jogador2fase2.html
+++ b/Html/jogador2fase2.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./../Css/jogador1.css" />
-    <script src="./../javascript/jogador1.js"></script>
-
-    <title>LOR - Resiliente Ana</title>
+    <link rel="stylesheet" href="./../Css/jogador2.css" />
+    <script src="./../javascript/jogador2fase2.js"></script>
+    <title>Jogador 2</title>
   </head>
   <body>
     <main class="jogadores">
-      <div class="card1">
-        <div class="foto-card1">
+      <div class="card2">
+        <div class="foto-card2">
           <img
             class="imagem"
-            src="./../img/ana.jpg"
+            src="./../img/patrick.jpg"
             alt="Foto do personagem 1"
           />
         </div>
-        <h3 class="botao1">Resiliente Ana</h3>
+        <h3 class="botao2">Resiliente Patrick</h3>
       </div>
     </main>
+
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
   </body>
 </html>
