Finalizando estilo do projeto e página final do jogo

--- a/Html/fimdejogo.html
+++ b/Html/fimdejogo.html
@@ -15,8 +15,8 @@
     <main>
       <h3 class="bem-vindo">Muito bem!</h3>
       <p>
-        Uau! Você sabe bem como trilhar o caminho do sucesso e se tornar um
-        Resiliente. Parabéns por concluir todas as estapas com sucesso. Foque
+        Você sabe bem como trilhar o caminho do sucesso e se tornar um
+        Resiliente. Parabéns por concluir todas as estapas com sucesso. <br>Foque
         nos estudos, ajude sua equipe e você chegará longe. <br>Até os próximos
         jogos!
       </p>
