Alterando o JS do jogador1

--- a/Html/jogador1.html
+++ b/Html/jogador1.html
@@ -21,6 +21,14 @@
         </div>
         <h3 class="botao1">Resiliente Ana</h3>
       </div>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Ana precisa estar na aula às 9h mas acordou tarde e vai atrasar. Você
+          acha que ela informa sobre o atraso e vai pra aula, ou ela não assiste
+          a aula? Se sim (ela vai à aula) ou não (nada de aula)?
+        </p>
+        <button onclick="questao1()">Resposta</button>
+      </div>
     </main>
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
   </body>
