--- a/Html/jogador1fase2.html
+++ b/Html/jogador1fase2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./../Css/jogador1.css">
+    <link rel="stylesheet" href="./../Css/jogador1.css" />
     <script src="./../javascript/jogador1fase2.js"></script>
     <title>LOR - Resiliente Ana</title>
   </head>
@@ -19,6 +19,13 @@
           />
         </div>
         <h3 class="botao1">Resiliente Ana</h3>
+      </div>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Após 2h de estudos, Ana resolveu desligar o notebook. O que ela deve
+          fazer: tomar uma cerveja (sim), estudar até cansar (não)?
+        </p>
+        <button onclick="questao2()">Resposta</button>
       </div>
     </main>
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
