--- a/Html/jogador1fase3.html
+++ b/Html/jogador1fase3.html
@@ -20,6 +20,14 @@
         </div>
         <h3 class="botao1">Resiliente Ana</h3>
       </div>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Ana finalizou o curso e precisa fazer uma postagem no LinkedIn. Ela
+          usa o método Golden Circle pra se destacar (sim) ou faz uma postagem
+          de qualquer jeito (não)?
+        </p>
+        <button onclick="questao3()">Resposta</button>
+      </div>
     </main>
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
   </body>
