Alterando JS do jogador2

--- a/Html/jogador2.html
+++ b/Html/jogador2.html
@@ -20,6 +20,13 @@
         </div>
         <h3 class="botao2">Resiliente Patrick</h3>
       </div>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Patrick finalizou seu exercício e precisa criar seu repositório no
+          Git. Que comando ele utiliza para criar seu repositório?
+        </p>
+        <button onclick="questao1()">Resposta</button>
+      </div>
     </main>
 
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
