--- a/Html/jogador2fase2.html
+++ b/Html/jogador2fase2.html
@@ -20,6 +20,13 @@
         </div>
         <h3 class="botao2">Resiliente Patrick</h3>
       </div>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Patrick não lembra as pastas que tem em seu projeto, usando o Git, que
+          comando ele usa pra saber as pastas disponíveis?
+        </p>
+        <button onclick="questao2()">Resposta</button>
+      </div>
     </main>
 
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
