--- a/Html/jogador2fase3.html
+++ b/Html/jogador2fase3.html
@@ -20,6 +20,13 @@
         </div>
         <h3 class="botao2">Resiliente Patrick</h3>
       </div>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Patrick está em dúvida de qual comando usar para subir seu projeto no
+          GitHub. Você consegue ajudá-lo?
+        </p>
+        <button onclick="questao3()">Resposta</button>
+      </div>
     </main>
 
     <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
