--- a/Html/jogador3.html
+++ b/Html/jogador3.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../Css/jogador3.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./../Css/jogador3.css" />
     <script src="./../javascript/jogador3.js"></script>
     <title>Jogador 3</title>
-</head>
-<body>
-  <main class="jogadores">
-    <div class="card3">
+  </head>
+  <body>
+    <main class="jogadores">
+      <div class="card3">
         <div class="foto-card3">
           <img
             class="imagem"
@@ -20,9 +20,15 @@
         </div>
         <h3 class="botao3">Resiliente Alexandre</h3>
       </div>
-    </div>
-  </main>
+      <div class="box-pergunta">
+        <p class="pergunta">
+          Alexandre está em dúvida de como criar uma lista não ordenada. Você
+          consegue ajudá-lo, qual tag ele precisa usar, ul ou ol?
+        </p>
+        <button onclick="questao1()">Resposta</button>
+      </div>
+    </main>
 
-  <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
-</body>
+    <footer>© Projeto Grupo 3 | Códigos do Amanhã - Priscila Souza</footer>
+  </body>
 </html>
