Excluindo texto aleatório que estava flutuando no index

--- a/Html/index.html
+++ b/Html/index.html
@@ -8,17 +8,13 @@
     <title>League of Resilia</title>
   </head>
   <body>
-    <header>
-      <h1 class="texto-header">League of Resilia</h1>
-    </header>
-
     <main>
-      <h3 class="bem-vindo">Bem vindos ao <br>League of Resilia</h3>
+      <h3 class="bem-vindo">Bem vindos ao <br />League of Resilia</h3>
       <p>
         Ana, Patrick e Alexandre estão prestes a embarcar em uma aventura que
         mudará suas vidas para sempre. Eles foram selecionados para fazer parte
-        da turma 13 de Desenvolvedor Fullstack da Resilia e para se dar bem nessa jornada eles precisam da
-        sua ajuda.
+        da turma 13 de Desenvolvedor Fullstack da Resilia e para se dar bem
+        nessa jornada eles precisam da sua ajuda.
       </p>
       <a class="button" href="./jogadores.html">Vamos começar?</a>
     </main>
