Resolvendo bug do contador JS

--- a/Html/jogador1.html
+++ b/Html/jogador1.html
@@ -23,9 +23,9 @@
       </div>
       <div class="box-pergunta">
         <p class="pergunta">
-          Ana precisa estar na aula às 9h mas acordou tarde e vai atrasar. Você
+          Ana precisa estar na aula às 9h, mas acordou tarde e vai atrasar. Você
           acha que ela informa sobre o atraso e vai pra aula, ou ela não assiste
-          a aula? Se sim (ela vai à aula) ou não (nada de aula)?
+          a aula? <br>Se sim (ela vai à aula) ou não (nada de aula)?
         </p>
         <button onclick="questao1()">Resposta</button>
       </div>
