--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./../Css/index.css" />
+    <link rel="stylesheet" href="./Css/index.css" />
     <title>League of Resilia</title>
   </head>
   <body>
     <main>
-      <h3 class="bem-vindo">Bem vindos ao <br />League of Resilia</h3>
+      <h3 class="bem-vindo">Bem vindos ao <br /><strong>League of Resilia</strong></h3>
       <p>
         Ana, Patrick e Alexandre estão prestes a embarcar em uma aventura que
         mudará suas vidas para sempre. Eles foram selecionados para fazer parte
         da turma 13 de Desenvolvedor Fullstack da Resilia e para se dar bem
         nessa jornada eles precisam da sua ajuda.
       </p>
-      <a class="button" href="./jogadores.html">Vamos começar?</a>
+      <a class="button" href="./Html/jogadores.html">Vamos começar?</a>
     </main>
   </body>
 </html>
