Atualizando o contador JS

--- a/Html/jogador2fase2.html
+++ b/Html/jogador2fase2.html
@@ -22,7 +22,7 @@
       </div>
       <div class="box-pergunta">
         <p class="pergunta">
-          Patrick não lembra as pastas que tem em seu projeto, usando o Git, que
+          Patrick não lembra as pastas que tem em seu projeto. Usando o Git, que
           comando ele usa pra saber as pastas disponíveis?
         </p>
         <button onclick="questao2()">Resposta</button>
