Ajustando link com o index na página fimDeJogo

--- a/Html/fimdejogo.html
+++ b/Html/fimdejogo.html
@@ -20,7 +20,7 @@
         nos estudos, ajude sua equipe e você chegará longe. <br>Até os próximos
         jogos!
       </p>
-      <a class="button" href="./index.html">Recomece o jogo</a>
+      <a class="button" href="/index.html">Recomece o jogo</a>
     </main>
   </body>
 </html>
