--- a/Html/gameover.html
+++ b/Html/gameover.html
@@ -19,7 +19,7 @@
         sucesso. Mas não se preocupe você tem a chance de fazer diferente dessa
         vez. <br>Quer tentar de novo?
       </p>
-      <a class="button" href="./../index.html">Recomece o jogo</a>
+      <a class="button" href="/index.html">Recomece o jogo</a>
     </main>
   </body>
 </html>
